--- a/package.json
+++ b/package.json
@@ -74,6 +74,23 @@
   ],
   "type": "module",
   "main": "dist/index.js",
+  {
+  "name": "openclaw",
+  "version": "1.0.0",
+  "description": "OpenClaw Telegram Bot",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js"
+  },
+  "engines": {
+    "node": ">=20"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "@whiskeysockets/baileys": "^7.0.0-rc.9"
+  }
+}
+
   "exports": {
     ".": "./dist/index.js",
     "./plugin-sdk": "./dist/plugin-sdk/index.js",
